# blockamok

./: .gitignore  CMakeLists.txt  README.md  blockamok.sln  blockamok.smdh  blockamok.vcxproj  blockamok.vcxproj.filters  config.ini
Makefiles/: Android.mk  Application.mk  Makefile_3ds  Makefile_gc  Makefile_linux  Makefile_mac  Makefile_pc  Makefile_pc_x86  Makefile_psp  Makefile_switch  Makefile_wii  Makefile_xbox  make_ps2.sh  make_rg35xx.sh  make_vita.sh  make_wii_u.sh
Scripts/: compile_all.bat  cubeSizeApproximator.py
release-resources/: Blockamok_rg35xx.sh  app_3ds.rsf  banner_3ds.bnr  icon_3ds.smdh  meta_wii.xml  meta_wiiu.xml  resource.h  resource.rc
src/: archipelago.c  archipelago.h  audio.c  audio.h  config.c  config.h  draw.c  draw.h  game.c  game.h  game_init.c  game_init.h  general.c  general.h  input.c  input.h  main.c  math_custom.c  math_custom.h  text.c  text.h  text_options.c
src/audio/: ding2_short.c  ding2_short.h  ding2_short_reversed.c  ding2_short_reversed.h  falling_people.c  falling_people.h  falling_up.c  falling_up.h  insanity.c  insanity.h  mano_-_darkness_in_the_night.c  mano_-_darkness_in_the_night.h  spaceranger_50k.c  spaceranger_50k.h  thunk.c  thunk.h  zoom3_short.c  zoom3_short.h
src/fonts/: Mono.c  Mono.h
